--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100vw;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+img {
+  width: 300px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input {
+  width: 400px;
+  padding: 10px;
+  border-radius: 20px;
+  box-shadow: 0px -1px 5px 5px rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0px -1px 5px 5px rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0px -1px 5px 5px rgba(0, 0, 0, 0.12);
+  border: none;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.icon-container {
+  display: flex;
+  flex-direction: column;
+  width: 60px;
+}
+
+.icon-wrapper {
+  width: 60px;
+  height: 60px;
+  background-color: wheat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+}
+
+.icon {
+  width: 30px;
+  background-color: whitesmoke;
+  border-radius: 100%;
+}
+
+.shortcut-list {
+  display: flex;
+  gap: 3rem;
+  flex-wrap: wrap;
+  width: 400px;
+  padding: 20px;
+  justify-content: center;
+}
+
+.search-suggest {
+  width: 400px;
+  border-radius: 20px;
+  box-shadow: 0px -1px 5px 5px rgba(0, 0, 0, 0.12);
+  -webkit-box-shadow: 0px -1px 5px 5px rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0px -1px 5px 5px rgba(0, 0, 0, 0.12);
+  margin-top: 0;
+  padding: 10px;
+}
+
+.search-suggest ul {
+  list-style-type: none;
 }
